--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
 	<title>Hello Coursera XTEST</title>
 </head>
 <body>
-<h1>Hello Coursera! TEST 1 2 3 4 5</h1>
+<h1>Hello Coursera! ABCDEFGHIJKLMNGHIJK</h1>
 </body>
 </html>
