--- a/site/index.html
+++ b/site/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Hello Coursera XTEST</title>
+	<title>Hello! XTEST</title>
 </head>
 <body>
-<h1>Hello Coursera! ABCDEFGHIJKLMNGHIJK</h1>
+	<h1>Hello there! ABCDEFGHIJKLMNGHIJK</h1>
 </body>
 </html>
