--- a/site/classwork/A3-1.html
+++ b/site/classwork/A3-1.html
@@ -2,37 +2,184 @@
 <head>
 	<title>📄Resume</title>
 </head>
-<body>
-	<!--<div>
-		<p style="text-align: left;"><a href="A2-3.html" title="Previous Page">Contact Us!</a> </p>
-		<p style="text-align: right;"><a href="A2-2.html" title="Next Page">Registration Form</a> </p>
-		<a href="A2-3.html" title="Previous Page">Contact Us!</a>
-		<a href="A2-2.html" title="Next Page">Registration Form</a>
-		<h1 style="text-align: center; font-family: sans-serif;">Curriculum Vitae (CV)</h1>
-		
-	</div>-->
+<body link="DarkCyan" alink="black" vlink="DarkCyan">
+	
+	<!--HEADER-->
+	<table width="100%">
+		<tr>
+			<td width="25%"><a href="A3-3.html" title="Previous Page" style="font-family:Product Sans;text-decoration: none">< Contact Us!</a></td>
+			<td align="center"><h1 style="font-family: sans-serif;">Curriculum Vitae (CV)</h1></td>
+			<td  width="25%" align="right"><a href="A3-2.html" title="Next Page" style="font-family:Product Sans;text-decoration: none;">Registration Form ></a></td>
+		</tr>
+	</table>
+	<hr>
 
-	<table border="10px" width="100%">
-      <tr>
-        <td ><a href="A2-3.html" title="Previous Page">Contact Us!</a></td>
-        <td align="center"><h1 style="font-family: sans-serif;">Curriculum Vitae (CV)</h1></td>
-        <td  align="right"><a href="A2-2.html" title="Next Page">Registration Form</a></td>
-      </tr>
-    </table>
-
-
-	<div style="margin: 100px; font-family: Product Sans;">
-
-		<p style="font-size: 24px;"><b>Pratyush Kumar <img src="NMIMS Image.png" alt="NMIMS logo" align="right" style="width:128px;height:128px;"></b></p>
-		<p>MBA Tech Computer Engineering</p>
-		<p>📧 pratyush.kumar@hotmail.com</p>
-		<p>📞 9137897309</p>
-
-		
+	<!--Section Header-->
+	<section id="section0" style="font-family: Product Sans; margin-left: 100px; margin-right: 100px;">
+		<table align = "center">
+			<tr>
+				<td><h3>Jump to a section:</h3></td>
+			</tr>
+			<tr>
+				<td>
+					<ul>
+						<li><a href="#section1">Introduction</a></li>
+						<li><a href="#section2">Objective</a></li>
+						<li><a href="#section3">Education</a></li>
+						<li><a href="#section4">Technical Skills</a></li>
+						<li><a href="#section5">Key Projects</a></li>
+						<li><a href="#section6">Technical Skills</a></li>
+						<li><a href="#section7">Work Experience</a></li>
+					</ul>
+				</td>
+			</tr>
+		</table>
 		<hr>
+	</section>
 
-		<h2><u>Objective</u></h2>
-		<p>To use my exceptional procrastination skills to put off completing tasks until the very last minute, thereby maximizing my stress levels and performance.</p>
+	<!--Introduction-->
+	<div style="margin:100px">
+		<section id="section1" style="font-family: Product Sans;">
+			<p style="font-size: 24px;"><b>Pratyush Kumar <img src="NMIMS Image.png" alt="NMIMS logo" align="right" style="width:128px;height:128px;"></b></p>
+			<p>MBA Tech Computer Engineering</p>
+			<p>📧 pratyush.kumar@hotmail.com</p>
+			<p>📞 9137897309</p>
+			<hr>
+		</section>
+
+		<!--Objective-->
+		<section id="section2" style="font-family: Product Sans;">
+			<h2><u>Objective</u></h2>
+			<p>To use my exceptional procrastination skills to put off completing tasks until the very last minute, thereby maximizing my stress levels and performance.</p>
+		</section>
+
+		<!--Education-->
+		<section id="section3" style="font-family: Product Sans;">
+			<h2><u>Education</u></h2>
+			<table width="100%" border="1px">
+				<tr style="background-color: lightgray;">
+					<th>Degree</th>
+					<th>Institute</th>
+					<th>Board/University</th>
+					<th>CGPA/Percentage</th>
+					<th>Year</th>
+				</tr>
+				<tr align="center">
+					<td>MBA Tech</td>
+					<td>Mukesh Patel School of Technology Management & Engineering</td>
+					<td>NMIMS University</td>
+					<td>3.74</td>
+					<td>Currently Pursuing</td>
+				</tr>
+				<tr align="center">
+					<td>XII</td>
+					<td rowspan="2">Lilavatibai Podar High School</td>
+					<td>ISC</td>
+					<td>95%</td>
+					<td>2019-21</td>
+				</tr>
+				<tr align="center">
+					<td>X</td>
+					<td>ICSE</td>
+					<td>90%</td>
+					<td>2018-19</td>
+				</tr>
+			</table>
+		</section>
+
+		<!--Tech Skills-->
+		<section id="section4" style="font-family: Product Sans;">
+			<h2><u>Technical Skills</u></h2>
+			<table width=100% border=1px>
+				<tr style="background-color:lightgray;">
+					<th>Domain</th>
+					<th>Details</th>
+				</tr>
+				<colgroup>
+					<col span="1" style="background-color:lightyellow;">
+				</colgroup>
+				<tr>
+					<td>Languages</td>
+					<td>Java, C++, Python</td>
+				</tr>
+				<tr>
+					<td>Web Designing</td>
+					<td>HTML, CSS</td>
+				</tr>
+				<tr>
+					<td>Software</td>
+					<td>Notepad, MS Paint, Discord</td>
+				</tr>
+				<tr>
+					<td>Database</td>
+					<td>MySQL</td>
+				</tr>
+				<tr>
+					<td>Analytics</td>
+					<td>R language, Weka</td>
+				</tr>
+				<tr>
+					<td>Operating Systems</td>
+					<td>Windows, Linux</td>
+				</tr>
+			</table>
+		</section>
+
+		<!--Projects-->
+		<section id="section5" style="font-family: Product Sans;">
+			<h2><u>Key Projects</u></h2>
+			<table width=100% border=1px>
+				<tr style="background-color:lightgray;">
+					<th>Project Title</th>
+					<th>Duration</th>
+					<th>Platform Used</th>
+					<th>Brief Description</th>
+				</tr>
+				<tr align="center">
+					<td>Deer hunter</td>
+					<td>2 years</td>
+					<td>Safari Browser</td>
+					<td>Hunted deers, and fought Russian bears in the middle of Sahara desert</td>
+				</tr>
+				<tr align="center">
+					<td>Cow Management System</td>
+					<td>1 year</td>
+					<td>MySQL</td>
+					<td>Made an efficient a cow monitoring system for dairy herd management that helps farmers record and track livestock, from birth to sale and everything in between</td>
+				</tr>
+			</table>
+		</section>
+
+		<!--Certifications-->
+		<section id="section6" style="font-family: Product Sans;">
+			<h2><u>Certifications</u></h2>
+			<ul>
+				<li>Converting oxygen to carbon dioxide</li>
+				<li>Certified sloth</li>
+				<li></li>
+			</ul>
+		</section>
+
+		<!--Work-->
+		<section id="section7" style="font-family: Product Sans;">
+			<h2><u>Work Experience</u></h2>
+			<ol>
+				<li>PhD in Sleeping</li>
+				<li>List 2</li>
+			</ol>
+		</section>
+	</div>
+	<hr>
+
+	<!--FOOTER-->
+	<div style="margin-left:100px;margin-right:100px">
+		<table width="100%">
+			<tr>
+				<td align="left">This page was crafted by Pratyush. &copy Copyright 1969</td>
+				<td align="right"><a href="#section0" title="To the top & beyond!" style="font-family:Product Sans;text-decoration: none">Back to top ^</a></td>
+			</tr>
+		</table>
+
 	</div>
 </body>
 </html>
