--- a/site/classwork/A2-1.html
+++ b/site/classwork/A2-1.html
@@ -10,6 +10,7 @@
 		<p>MBA Tech Computer Engineering</p>
 		<p>📧 pratyush.kumar@hotmail.com</p>
 		<p>📞 9137897309</p>
+		<p>Def not 18</p>
 
 		
 		<hr>
@@ -23,4 +24,3 @@
 
 
 
-ss
