--- a/site/classwork/A3-1.html
+++ b/site/classwork/A3-1.html
@@ -9,7 +9,7 @@
 		<tr>
 			<td width="25%"><a href="A3-3.html" title="Previous Page" style="font-family:Product Sans;text-decoration: none">< Contact Us!</a></td>
 			<td align="center"><h1 style="font-family: sans-serif;">Curriculum Vitae (CV)</h1></td>
-			<td  width="25%" align="right"><a href="A3-2.html" title="Next Page" style="font-family:Product Sans;text-decoration: none;">Registration Form ></a></td>
+			<td  width="25%" align="right"><a href="A3-2_Login.html" title="Next Page" style="font-family:Product Sans;text-decoration: none;">Registratie formulier ></a></td>
 		</tr>
 	</table>
 	<hr>
@@ -169,9 +169,9 @@
 			</ol>
 		</section>
 	</div>
-	<hr>
-
+	
 	<!--FOOTER-->
+	<hr>
 	<div style="margin-left:100px;margin-right:100px">
 		<table width="100%">
 			<tr>
