--- a/site/classwork/A3-2.html
+++ b/site/classwork/A3-2.html
@@ -14,16 +14,63 @@
 	</table>
 	<hr>
 
+	<form>
+		<label for="fname">First name:</label><br>
+		<input type="text" id="fname" name="fname"><br> <!--id is for linking to label-->
+		<label for="lname">Last name:</label><br>
+		<input type="text" id="lname" name="lname"><br> <!--name id for naming the input-->
+		
 
-	<!--FOOTER-->
-	<div style="margin-left:100px;margin-right:100px">
-		<table width="100%">
-			<tr>
-				<td align="left">This page was crafted by Pratyush. &copy Copyright 1969</td>
-				<td align="right"><a href="#section0" title="To the top & beyond!" style="font-family:Product Sans;text-decoration: none">Back to top ^</a></td>
-			</tr>
-		</table>
+		<label>Username : <br><input type="text" /></label>
+		
+	</form>
+	<form>
+		<tr>
+			<td align="right">user name</td>
+			<td><input type="text" name="usrnm" maxlenghth=15 size=10/></td>
+		</tr>
+		<tr>
+			<td align="right">Password</td>
+			<td><input type="Password" name="pw" maxlenghth=15 size=10/></td>
+		</tr>
+	</form>
+	<p>Choose your favorite Web language:</p>
 
-	</div>
-</body>
-</html>
+<form>
+  <input type="radio" id="html" name="fav_language" value="HTML">
+  <label for="html">HTML</label><br>
+  <input type="radio" id="css" name="fav_language" value="CSS">
+  <label for="css">CSS</label><br>
+  <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+  <label for="javascript">JavaScript</label>
+</form>
+<form>  
+    First Name: <input type="text" name="firstname"/> <br/>  
+    Last Name:  <input type="text" name="lastname"/> <br/>  
+ </form>  
+
+
+	<div style="text-align: center;">
+		<div style="font-family: Product Sans";>
+			<p><b>Username: __________ </b></p>
+			<p><b>First Name: __________ </b></p>
+			<p><b>Last Name: __________ </b></p>
+			<p><b>Your mobile: __________ </b></p>
+			<p><b>Your email: __________ </b></p>
+			<p><b>Password: __________ </b></p>
+		</div>
+
+
+		<!--FOOTER-->
+		<hr>
+		<div style="margin-left:100px;margin-right:100px">
+			<table width="100%">
+				<tr>
+					<td align="left">This page was crafted by Pratyush. &copy Copyright 1969</td>
+					<td align="right"><a href="#section0" title="To the top & beyond!" style="font-family:Product Sans;text-decoration: none">Back to top ^</a></td>
+				</tr>
+			</table>
+
+		</div>
+	</body>
+	</html>
