--- a/site/classwork/A2-1.html
+++ b/site/classwork/A2-1.html
@@ -6,7 +6,7 @@
 	<h1 style="text-align: center; font-family: sans-serif;">Curriculum Vitae (CV)</h1>
 	<div style="margin: 100px; font-family: Product Sans;">
 
-		<p style="font-size: 24px;"><b>Pratyush Kumar <img src="NMIMS Image.png" alt="NMIMS logo" align="right" style="width:128px;height:128px;"></b></p>
+		<p style="font-size: 24px;"><b>Pratyush Kumar <img src=NMIMS_logo.png alt="NMIMS logo" align="right" style="width:128px;height:128px;"></b></p>
 		<p>MBA Tech Computer Engineering</p>
 		<p>📧 pratyush.kumar@hotmail.com</p>
 		<p>📞 9137897309</p>
