--- a/site/classwork/A3-2_Form.html
+++ b/site/classwork/A3-2_Form.html
@@ -1,76 +1,82 @@
-<!doctype html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<title>📝Register Now!</title>
+  <meta charset="utf-8">
+  <title>📝Registration Form</title>
 </head>
+
 <body link="darkcyan" alink="black" vlink="darkcyan">
-	
-	<!--HEADER-->
-	<table width="100%">
-		<tr>
-			<td width="40%"><a href="A3-2_Login.html" title="Previous Page" style="font-family:Product Sans;text-decoration: none">< Sign Up!</a></td>
-			<td width="60%" align="left"><h1 style="font-family: sans-serif;">Registration Page</h1></td>
-			
-		</tr>
-	</table>
-	<hr>
 
-	<!--Content-->
-	<section style="background-color: teal; text-align: center; font-family: Product Sans; color: white;">
-		<h2 style="padding-top: 20px;">Create Your Macrohard account</h2>
-		<p>to use our services!</p><br>
-	</section>
-	<section style="background-color: teal; text-align: left; font-family: Product Sans; color: white; padding-left: 10%;">
-		
-		<form>
-			<label>First Name : <input type="text" /></label>
-			<label>Last Name : <input type="text" /></label><br>
+  <!--HEADER-->
+  <table width="100%" id="section0">
+    <tr>
+      <td width="40%">
+        <a href="A3-2_Login.html" title="Previous Page" style="font-family:Product Sans;text-decoration: none">&lt; Sign Up!</a>
+      </td>
+      <td width="60%" align="left">
+        <h1 style="font-family: sans-serif;">Registration Page</h1>
+      </td>
+    </tr>
+  </table>
+  <hr>
 
-			<p>Gender :
-				<label style="color:mediumvioletred;"><input type="radio" name="gender" value="m" /> Male</label>
-				<label style="color:mediumvioletred;"><input type="radio" name="gender" value="f/"> Female</label>
-			</p>
+  <!--Content 1-->
+  <section style="background-color: teal; text-align: center; font-family: Product Sans; color: white; padding-left: 20%; padding-right: 20%;">
+    <h2 style="padding-top: 20px;">Create Your Macrohard account</h2>
+    <p>to use our services!</p>
+    <hr style="background-color: lightgoldenrodyellow; border: none; height: 2px;">
+    <br>
+    
+    <form>  
+      <label>First Name : <input type="text"></label> <label>Last Name : <input type="text"></label><br>
+      <p style="color:cornflowerblue;"><span style="color: white;">Gender :</span><label><input type="radio" name="gender" value="m"> Male</label> <label><input type="radio" name="gender" value="f"> Female</label> <label><input type="radio" name="gender" value="b"> Bruh</label></p><br> 
+      <label>Your Email : <input type="text" value="someone@alien.com"></label><br>
+      <br>
+      Phone : <select name="Branch">
+        <option value="#">
+          +420
+        </option>
+        <option value="ce">
+          +187
+        </option>
+        <option value="cs">
+          +91
+        </option>
+        <option value="cse">
+          +69
+        </option>
+      </select> <input type="text"><br>
+      <p><label>Your birthday : <input type="date"></label></p>
 
-			<br><label>Your Email : <input type="text" /></label><br>
+      <div style="text-align: left; font-family: Product Sans; color: white; padding-left: 20%; padding-right: 20%;">
+        <p style="text-align: left;">Address:<br>
+        <textarea rows="5" cols="40"></textarea></p><br>
+        <hr style="background-color: lightgoldenrodyellow; border: none; height: 2px;">
+        <p><span style="font-size:20px; color: darkorange;">Terms of Service:</span><br>
+        <br>
+        <label><input type="checkbox">All users must accept the magical agreement of confusion and acknowledge that they have no idea what they are signing up for.</label><br>
+        <br>
+        <label><input type="checkbox">The user understands and agrees that any disputes will be settled in a playground.</label></p><br>
+      </div>
 
-			<br><label>Phone : <select name="Branch"  size=“4”>
-				<option value="#">+91</option>
-				<option value="ce">+400</option>
-				<option value="cs">+001</option>
-				<option value="cse">+69</option>
-			</select>
-			<input type="text" />
-		</label><br>
+      <!--Content 3-->
+      <div style="padding-bottom: 10px;">
+        <p><button style="background-color: skyblue; color: black; border-style: outset; border-color: skyblue; height:40px; width: 100px; font-family: Product Sans; font-weight: bold; text-shadow: none; margin-bottom: 5px;" type="button" onclick="location.href='A3-2_Submit.html'">Submit</button> <button style="background-color: lightgray; color: black; border-style: outset; border-color: lightgray; height:40px; width: 100px; font-family: Product Sans; font-weight: bold; text-shadow: none; margin-bottom: 5px;" type="reset">Reset</button></p>
+      </div>
+    </form>
+  </section>
 
-		<p><label>Your birthday : <input type="date"/></p></label>
-
-		<p>Address:
-			<br>
-			<textarea rows="5" cols="40"></textarea>
-		</p><br>
-
-		<p>Terms of Service:<br>
-			<br><label><input type="checkbox" />Thanks to our experiment, we now have complete control over the naughty list status, child-naming rights and pizza consumption habits of 270 people across the world. What a haul.</label><br>
-			<br><label><input type="checkbox" />Don’t worry, we won’t actually enforce these terms, you can still eat as much pizza as you want.</label>
-		</p><br>
-		<br>
-		<p>
-			<button style="background-color: cornsilk; color: black; border-style: outset; border-color: cornsilk; height:40px; width: 100px; font-family: Product Sans; font-style: bold; text-shadow: none;" type="button" style="margin-bottom: 5px;" onclick="location.href='A3-2_Submit.html'">Submit</button>
-		</p>
-
-	</form>
-</section>
-
-
-<!--FOOTER-->
-<hr>
-<div style="margin-left:100px;margin-right:100px">
-	<table width="100%">
-		<tr>
-			<td align="left">This page was crafted by Pratyush. &copy Copyright 1969</td>
-			<td align="right"><a href="#section0" title="To the top & beyond!" style="font-family:Product Sans;text-decoration: none">Back to top ^</a></td>
-		</tr>
-	</table>
-
-</div>
+  <!--FOOTER-->
+  <hr>
+  <div style="margin-left:100px;margin-right:100px">
+    <table width="100%">
+      <tr>
+        <td align="left">This page was crafted by Pratyush. © Copyright 1969</td>
+        <td align="right">
+          <a href="#section0" title="To the top &amp; beyond!" style="font-family:Product Sans;text-decoration: none">Back to top ^</a>
+        </td>
+      </tr>
+    </table>
+  </div>
 </body>
 </html>
