--- a/site/classwork/A3-2_Login.html
+++ b/site/classwork/A3-2_Login.html
@@ -1,47 +1,55 @@
-<!doctype html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<title>📝Register Now!</title>
+  <meta charset="utf-8">
+  <title>📝Register Now!</title>
 </head>
+
 <body link="darkcyan" alink="black" vlink="darkcyan">
-	
-	<!--HEADER-->
-	
-	<table width="100%">
-		<tr>
-			<td width="25%"><a href="A3-1.html" title="Previous Page" style="font-family:Product Sans;text-decoration: none">< Résumé</a></td>
-			<td align="center"><h1 style="font-family: sans-serif;">Sign Up!</h1></td>
-			<td  width="25%" align="right"><a href="A3-3.html" title="Next Page" style="font-family:Product Sans;text-decoration: none;">Contact Us! ></a></td>
-		</tr>
-	</table>
-	<hr>
 
-	<!--Content-->
-	<section style="background-color: teal; text-align: center; font-family: Product Sans; color: white;">
-		<div>
-			<h2>Welcome to Macrohard</h2>
-			<p>Start setting up your account by entering an username and password:</p>
-			<form>
-				<label>Username : <input type="text" /></label><br>
-				<br><label>Password :  <input type="password" /></label><br>
-	
-				<br><button style="background-color: cornsilk; color: black; border-style: outset; border-color: cornsilk; height:40px; width: 100px; font-family: Product Sans; font-style: bold; text-shadow: none;" type="button" style="margin-bottom: 5px;" onclick="location.href='A3-2_Form.html'">Submit</button>
-		</div>
-	</section>
+  <!--HEADER-->
+  <table width="100%" id="section0">
+    <tr>
+      <td width="25%">
+        <a href="A3-1.html" title="Previous Page" style="font-family:Product Sans;text-decoration: none">&lt; Résumé</a>
+      </td>
+      <td align="center">
+        <h1 style="font-family: sans-serif;">Sign Up!</h1>
+      </td>
+      <td width="25%" align="right">
+        <a href="A2-3.html" title="Next Page" style="font-family:Product Sans;text-decoration: none;">Contact Us! &gt;</a>
+      </td>
+    </tr>
+  </table>
+  <hr>
 
+  <!--Content-->
+  <section style="background-color: teal; text-align: center; font-family: Product Sans; color: white; padding-bottom:10%; padding-right:20%;padding-left: 20%; padding-top:10%;">
+    <div>
+      <h2>Welcome to Macrohard</h2>
+      <p>Start setting up your account by entering an username and password:</p>
+      <hr style="background-color: lightgoldenrodyellow; border: none; height: 2px;">
+      <form style="padding-top:5%">
+        <label>Username : <input type="text"></label><br>
+        <br>
+        <label>Password : <input type="password"></label><br>
+        <br>
+        <button style="background-color: skyblue; color: black; border-style: outset; border-color: skyblue; height:40px; width: 100px; font-family: Product Sans; font-weight: bold; text-shadow: none; margin-bottom: 5px;" type="button" onclick="location.href='A3-2_Form.html'">Submit</button>
+      </form>
+    </div>
+  </section>
 
-	<!--FOOTER-->
-	
-	<!--<div style="position: fixed; bottom: 0; margin-bottom: 0px; width: 100%;">-->
-		
-		<hr>
-		<div style="margin-left:100px;margin-right:100px;">
-			<table width="100%">
-				<tr>
-					<td align="left">This page was crafted by Pratyush. &copy Copyright 1969</td>
-					<td align="right"><a href="#section0" title="To the top & beyond!" style="font-family:Product Sans;text-decoration: none">Back to top ^</a></td>
-				</tr>
-			</table>
-			<!--</div>-->
-		</div>
-	</body>
-	</html>
+  <!--FOOTER-->
+  <hr>
+  <div style="margin-left:100px;margin-right:100px;">
+    <table width="100%">
+      <tr>
+        <td align="left">If you find any typos, they're not mistakes, they're creative liberties. © Copyright 1969</td>
+        <td align="right">
+          <a href="#section0" title="To the top &amp; beyond!" style="font-family:Product Sans;text-decoration: none">Back to top ^</a>
+        </td>
+      </tr>
+    </table>
+  </div>
+</body>
+</html>
