--- a/site/classwork/A3-2_Submit.html
+++ b/site/classwork/A3-2_Submit.html
@@ -1,43 +1,48 @@
-<!doctype html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<title>📝Register Now!</title>
+  <meta charset="utf-8">
+  <title>✅ Hmm Thank You!</title>
 </head>
+
 <body link="darkcyan" alink="black" vlink="darkcyan">
-	
-	<!--HEADER-->
-	
-	<table width="100%">
-		<tr>
-			<td width="25%"><a href="A3-2_Form.html" title="Previous Page" style="font-family:Product Sans;text-decoration: none">< Back to Form</a></td>
-			<td align="center"><h1 style="font-family: sans-serif;">Sign Up!</h1></td>
-			<td  width="25%" align="right"><a href="A3-3.html" title="Next Page" style="font-family:Product Sans;text-decoration: none;">Contact Us! ></a></td>
-		</tr>
-	</table>
-	<hr>
 
-	<!--Content-->
-	<section style="background-color: teal; text-align: center; font-family: Product Sans; color: white;">
-		<div>
-			<h2>Welcome to Macrohard</h2>
-			<p>Start setting up your account by entering an username and password:</p>
-			<form>
-		</div>
-	</section>
+  <!--HEADER-->
+  <table width="100%" id="section0">
+    <tr>
+      <td width="25%">
+        <a href="A3-2_Login.html" title="Previous Page" style="font-family:Product Sans;text-decoration: none">&lt; Log in</a>
+      </td>
+      <td align="center">
+        <h1 style="font-family: sans-serif;">Signed Up!</h1>
+      </td>
+      <td width="25%" align="right">
+        <a href="A3-3.html" title="Next Page" style="font-family:Product Sans;text-decoration: none;">Fun with Frames &gt;</a>
+      </td>
+    </tr>
+  </table>
+  <hr>
 
+  <!--Content-->
+  <section style="background-color: teal; text-align: center; font-family: Product Sans; color: white; padding-bottom:27%; padding-right:18%;padding-left: 18%; padding-top:5%;">
+    <div>
+      <h2>✅ Your information has been sent to SBI successfully!</h2>
+      <p>Thanks for filling out our form! We appreciate your time and effort. Without it, we'd have nothing to read while procrastinating at work.</p>
+      <hr width="60%" style="background-color: lightgoldenrodyellow; border: none; height: 2px;">
+    </div>
+  </section>
 
-	<!--FOOTER-->
-	
-	<!--<div style="position: fixed; bottom: 0; margin-bottom: 0px; width: 100%;">-->
-		
-		<hr>
-		<div style="margin-left:100px;margin-right:100px;">
-			<table width="100%">
-				<tr>
-					<td align="left">This page was crafted by Pratyush. &copy Copyright 1969</td>
-					<td align="right"><a href="#section0" title="To the top & beyond!" style="font-family:Product Sans;text-decoration: none">Back to top ^</a></td>
-				</tr>
-			</table>
-			<!--</div>-->
-		</div>
-	</body>
-	</html>
+  <!--FOOTER-->
+  <hr>
+  <div style="margin-left:100px;margin-right:100px;">
+    <table width="100%">
+      <tr>
+        <td align="left">This website was last updated never. © Copyright 1969</td>
+        <td align="right">
+          <a href="#section0" title="To the top &amp; beyond!" style="font-family:Product Sans;text-decoration: none">Back to top ^</a>
+        </td>
+      </tr>
+    </table>
+  </div>
+</body>
+</html>
