--- a/site/classwork/A3-1.html
+++ b/site/classwork/A3-1.html
@@ -1,185 +1,220 @@
-<!doctype html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<title>📄Resume</title>
+  <meta charset="utf-8">
+  <title>📄Resume</title>
 </head>
+
 <body link="DarkCyan" alink="black" vlink="DarkCyan">
-	
-	<!--HEADER-->
-	<table width="100%">
-		<tr>
-			<td width="25%"><a href="A3-3.html" title="Previous Page" style="font-family:Product Sans;text-decoration: none">< Contact Us!</a></td>
-			<td align="center"><h1 style="font-family: sans-serif;">Curriculum Vitae (CV)</h1></td>
-			<td  width="25%" align="right"><a href="A3-2_Login.html" title="Next Page" style="font-family:Product Sans;text-decoration: none;">Registratie formulier ></a></td>
-		</tr>
-	</table>
-	<hr>
 
-	<!--Section Header-->
-	<section id="section0" style="font-family: Product Sans; margin-left: 100px; margin-right: 100px;">
-		<table align = "center">
-			<tr>
-				<td><h3>Jump to a section:</h3></td>
-			</tr>
-			<tr>
-				<td>
-					<ul>
-						<li><a href="#section1">Introduction</a></li>
-						<li><a href="#section2">Objective</a></li>
-						<li><a href="#section3">Education</a></li>
-						<li><a href="#section4">Technical Skills</a></li>
-						<li><a href="#section5">Key Projects</a></li>
-						<li><a href="#section6">Technical Skills</a></li>
-						<li><a href="#section7">Work Experience</a></li>
-					</ul>
-				</td>
-			</tr>
-		</table>
-		<hr>
-	</section>
+  <!--HEADER-->
+  <table width="100%" id="section0">
+    <tr>
+      <td width="25%">
+        <a href="A2-3.html" title="Previous Page" style="font-family:Product Sans;text-decoration: none">&lt; Contact Us!</a>
+      </td>
+      <td align="center">
+        <h1 style="font-family: sans-serif;">Curriculum Vitae (CV)</h1>
+      </td>
+      <td width="25%" align="right">
+        <a href="A3-2_Login.html" title="Next Page" style="font-family:Product Sans;text-decoration: none;">Registratie formulier &gt;</a>
+      </td>
+    </tr>
+  </table>
+  <hr>
+  <!--Section Header-->
+  <section style="font-family: Product Sans; margin-left: 100px; margin-right: 100px;">
+    <table align="center">
+      <tr>
+        <td>
+          <h3>Jump to a section:</h3>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <ul>
+            <li>
+              <a href="#section1">Introduction</a>
+            </li>
+            <li>
+              <a href="#section2">Objective</a>
+            </li>
+            <li>
+              <a href="#section3">Education</a>
+            </li>
+            <li>
+              <a href="#section4">Technical Skills</a>
+            </li>
+            <li>
+              <a href="#section5">Key Projects</a>
+            </li>
+            <li>
+              <a href="#section6">Certifications</a>
+            </li>
+            <li>
+              <a href="#section7">Work Experience</a>
+            </li>
+          </ul>
+        </td>
+      </tr>
+    </table>
+    <hr>
+  </section>
 
-	<!--Introduction-->
-	<div style="margin:100px">
-		<section id="section1" style="font-family: Product Sans;">
-			<p style="font-size: 24px;"><b>Pratyush Kumar <img src="NMIMS Image.png" alt="NMIMS logo" align="right" style="width:128px;height:128px;"></b></p>
-			<p>MBA Tech Computer Engineering</p>
-			<p>📧 pratyush.kumar@hotmail.com</p>
-			<p>📞 9137897309</p>
-			<hr>
-		</section>
+  <!--Introduction-->
+  <div style="margin:100px">
+    <div id="section1" style="font-family: Product Sans;">
+      <p style="font-size: 24px;"><b>Pratyush Kumar <img src="NMIMS_logo.png" alt="NMIMS logo" align="right" style="width:128px;height:128px;"></b></p>
+      <p>MBA Tech Computer Engineering</p>
+      <p>📧 pratyush.kumar@hotmail.com</p>
+      <p>📞 9137897309</p>
+      <hr>
+    </div>
 
-		<!--Objective-->
-		<section id="section2" style="font-family: Product Sans;">
-			<h2><u>Objective</u></h2>
-			<p>To use my exceptional procrastination skills to put off completing tasks until the very last minute, thereby maximizing my stress levels and performance.</p>
-		</section>
+    <!--Objective-->
+    <section id="section2" style="font-family: Product Sans;">
+      <h2><u>Objective</u></h2>
+      <p>To use my exceptional procrastination skills to put off completing tasks until the very last minute, thereby maximizing my stress levels and performance.</p>
+    </section>
 
-		<!--Education-->
-		<section id="section3" style="font-family: Product Sans;">
-			<h2><u>Education</u></h2>
-			<table width="100%" border="1px">
-				<tr style="background-color: lightgray;">
-					<th>Degree</th>
-					<th>Institute</th>
-					<th>Board/University</th>
-					<th>CGPA/Percentage</th>
-					<th>Year</th>
-				</tr>
-				<tr align="center">
-					<td>MBA Tech</td>
-					<td>Mukesh Patel School of Technology Management & Engineering</td>
-					<td>NMIMS University</td>
-					<td>3.74</td>
-					<td>Currently Pursuing</td>
-				</tr>
-				<tr align="center">
-					<td>XII</td>
-					<td rowspan="2">Lilavatibai Podar High School</td>
-					<td>ISC</td>
-					<td>95%</td>
-					<td>2019-21</td>
-				</tr>
-				<tr align="center">
-					<td>X</td>
-					<td>ICSE</td>
-					<td>90%</td>
-					<td>2018-19</td>
-				</tr>
-			</table>
-		</section>
+    <!--Education-->
+    <section id="section3" style="font-family: Product Sans;">
+      <h2><u>Education</u></h2>
+      <table width="100%" border="1px">
+      	<caption style="text-align: right; font-family: sans-serif;"><i>[As of 2077]</i></caption>
+        <tr style="background-color: lightgray;">
+          <th>Degree</th>
+          <th>Institute</th>
+          <th>Board/University</th>
+          <th>CGPA/Percentage</th>
+          <th>Year</th>
+        </tr>
+        <tr align="center">
+          <td>MBA Tech</td>
+          <td>Mukesh Patel School of Technology Management & Engineering</td>
+          <td>NMIMS University</td>
+          <td>3.74</td>
+          <td>Currently Pursuing</td>
+        </tr>
+        <tr align="center">
+          <td>XII</td>
+          <td rowspan="2">Lilavatibai Podar High School</td>
+          <td>ISC</td>
+          <td>95%</td>
+          <td>2019-21</td>
+        </tr>
+        <tr align="center">
+          <td>X</td>
+          <td>ICSE</td>
+          <td>90%</td>
+          <td>2018-19</td>
+        </tr>
+      </table>
+    </section>
 
-		<!--Tech Skills-->
-		<section id="section4" style="font-family: Product Sans;">
-			<h2><u>Technical Skills</u></h2>
-			<table width=100% border=1px>
-				<tr style="background-color:lightgray;">
-					<th>Domain</th>
-					<th>Details</th>
-				</tr>
-				<colgroup>
-					<col span="1" style="background-color:lightyellow;">
-				</colgroup>
-				<tr>
-					<td>Languages</td>
-					<td>Java, C++, Python</td>
-				</tr>
-				<tr>
-					<td>Web Designing</td>
-					<td>HTML, CSS</td>
-				</tr>
-				<tr>
-					<td>Software</td>
-					<td>Notepad, MS Paint, Discord</td>
-				</tr>
-				<tr>
-					<td>Database</td>
-					<td>MySQL</td>
-				</tr>
-				<tr>
-					<td>Analytics</td>
-					<td>R language, Weka</td>
-				</tr>
-				<tr>
-					<td>Operating Systems</td>
-					<td>Windows, Linux</td>
-				</tr>
-			</table>
-		</section>
+    <!--Tech Skills-->
+    <section id="section4" style="font-family: Product Sans;">
+      <h2><u>Technical Skills</u></h2>
+      <table width="100%" border="1px">
+        <colgroup>
+          <col span="1" style="background-color:lightyellow;">
+          <col style="background-color:white">
+        </colgroup>
+        <tr style="background-color:lightgray;">
+          <th>Domain</th>
+          <th>Details</th>
+        </tr>
+        <tr>
+          <td>Languages</td>
+          <td>Java, C++, Python</td>
+        </tr>
+        <tr>
+          <td>Web Designing</td>
+          <td>HTML, CSS</td>
+        </tr>
+        <tr>
+          <td>Software</td>
+          <td>Notepad, MS Paint, Discord</td>
+        </tr>
+        <tr>
+          <td>Database</td>
+          <td>MySQL</td>
+        </tr>
+        <tr>
+          <td>Analytics</td>
+          <td>R language, Weka</td>
+        </tr>
+        <tr>
+          <td>Operating Systems</td>
+          <td>Windows, Linux</td>
+        </tr>
+      </table>
+    </section>
 
-		<!--Projects-->
-		<section id="section5" style="font-family: Product Sans;">
-			<h2><u>Key Projects</u></h2>
-			<table width=100% border=1px>
-				<tr style="background-color:lightgray;">
-					<th>Project Title</th>
-					<th>Duration</th>
-					<th>Platform Used</th>
-					<th>Brief Description</th>
-				</tr>
-				<tr align="center">
-					<td>Deer hunter</td>
-					<td>2 years</td>
-					<td>Safari Browser</td>
-					<td>Hunted deers, and fought Russian bears in the middle of Sahara desert</td>
-				</tr>
-				<tr align="center">
-					<td>Cow Management System</td>
-					<td>1 year</td>
-					<td>MySQL</td>
-					<td>Made an efficient a cow monitoring system for dairy herd management that helps farmers record and track livestock, from birth to sale and everything in between</td>
-				</tr>
-			</table>
-		</section>
+    <!--Projects-->
+    <section id="section5" style="font-family: Product Sans;">
+      <h2><u>Key Projects</u></h2>
+      <table width="100%" border="1px">
+        <tr style="background-color:lightgray;">
+          <th>Project Title</th>
+          <th>Duration</th>
+          <th>Platform Used</th>
+          <th>Brief Description</th>
+        </tr>
+        <tr align="center">
+          <td>Deer hunter</td>
+          <td>2 years</td>
+          <td>Safari Browser</td>
+          <td>Hunted deers, and fought Russian bears in the middle of Sahara desert</td>
+        </tr>
+        <tr align="center">
+          <td>Cow Management System</td>
+          <td>1 year</td>
+          <td>MySQL</td>
+          <td>Made an efficient a cow monitoring system that helps farmers record and track livestock, from birth to sale and everything in between</td>
+        </tr>
+        <tr align="center">
+          <td>Secret Agent Training</td>
+          <td>3 months</td>
+          <td>James Bond spy kit</td>
+          <td>Spoke different languages, cracked codes and infiltrated enemy's territories. It was a real test of spy skills and ability to wear sunglasses indoors without looking ridiculous</td>
+        </tr>
+      </table>
+    </section>
 
-		<!--Certifications-->
-		<section id="section6" style="font-family: Product Sans;">
-			<h2><u>Certifications</u></h2>
-			<ul>
-				<li>Converting oxygen to carbon dioxide</li>
-				<li>Certified sloth</li>
-				<li></li>
-			</ul>
-		</section>
+    <!--Certifications-->
+    <section id="section6" style="font-family: Product Sans;">
+      <h2><u>Certifications</u></h2>
+      <ul>
+        <li><b>Certified Oxy-con.</b> Successfully 5,480,320 liters of oxygen to carbon dioxide until now.</li>
+        <li><b>Certified Snack Connoisseur from The Munchies Institute.</b> Certified in the art of snacking.</li>
+        <li><b>Certified Zombie Response Coordinator.</b> This certification teaches individuals how to prepare for and respond to a zombie outbreak.</li>
+        <li><b>Certified Professional of Inactivation.</b> This certification is offered by the Association for the Control of Auxiliary-Transmission Agents (ACATA) and tests individuals on their knowledge of inactivating pathogens, such as viruses and bacteria, in the lab setting.</li>
+      </ul>
+    </section>
 
-		<!--Work-->
-		<section id="section7" style="font-family: Product Sans;">
-			<h2><u>Work Experience</u></h2>
-			<ol>
-				<li>PhD in Sleeping</li>
-				<li>List 2</li>
-			</ol>
-		</section>
-	</div>
-	
-	<!--FOOTER-->
-	<hr>
-	<div style="margin-left:100px;margin-right:100px">
-		<table width="100%">
-			<tr>
-				<td align="left">This page was crafted by Pratyush. &copy Copyright 1969</td>
-				<td align="right"><a href="#section0" title="To the top & beyond!" style="font-family:Product Sans;text-decoration: none">Back to top ^</a></td>
-			</tr>
-		</table>
+    <!--Work-->
+    <section id="section7" style="font-family: Product Sans;">
+      <h2><u>Work Experience</u></h2>
+      <ol>
+        <li>Responsible for delaying important tasks until the last possible moment and then completing them under pressure. I excelled at multitasking and thrive in a fast-paced environment as the Chief Procrastination Officer at The Last Minute Company</li>
+        <li>Chief Napping Officer at Sleepy Owl: Led a team of 6 trained potatobags for creating a more relaxed and comfortable work environment</li>
+        <li>Worked at The Evil Genius Corp. for 2 years as a Minion. I was responsible for carrying out nefarious tasks, such as building death rays and digging underground lairs. I was also in charge of taking care of the boss's pet shark</li>
+      </ol>
+    </section>
+  </div>
 
-	</div>
+  <!--FOOTER-->
+  <hr>
+  <div style="margin-left:100px;margin-right:100px">
+    <table width="100%">
+      <tr>
+        <td align="left">This page was crafted by Pratyush. © Copyright 1969</td>
+        <td align="right">
+          <a href="#section0" title="To the top &amp; beyond!" style="font-family:Product Sans;text-decoration: none">Back to top ^</a>
+        </td>
+      </tr>
+    </table>
+  </div>
 </body>
 </html>
