--- a/site/navmenu2.html
+++ b/site/navmenu2.html
@@ -12,7 +12,7 @@
         background-color: gray;
     }
     
-    #navbar {
+    header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -34,20 +34,24 @@
   text-decoration: none;
   padding: 0 10px;
 }
+
 </style>
 
 <body>
-    <div id="navbar">
+    <header>
         <div id="logo">
-          <img src="logo.png" alt="Logo">
-        </div>
-        <div id="nav-links">
-          <a href="#home">Home</a>
-          <a href="#about">About</a>
-          <a href="#services">Services</a>
-          <a href="#contact">Contact</a>
-        </div>
-      </div>
+            <img src="logo.png" alt="Logo">
+          </div>
+        <nav>
+         
+          <div id="nav-links">
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#services">Services</a>
+            <a href="#contact">Contact</a>
+          </div>
+        </nav>
+      </header>
 </body>
 
 </html>
