--- a/site/classwork/A5-7.html
+++ b/site/classwork/A5-7.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf8">
+    <meta charset="utf-8">
     <title>🌟 Star Pattern</title>
     <style>
         body {
@@ -13,10 +13,6 @@
 
         h1 {
             font-family: 'Courier New', Courier, monospace;
-        }
-
-        p button {
-            margin-top: 2%;
         }
     </style>
 </head>
@@ -29,9 +25,10 @@
     <div id="content">
 
         <p style="font-family: Product Sans;">
-            Press the button to launch nuke:
+            Push the button to launch nuke:
+            <button onclick="print_pattern();">✔️ Just do it</button>
         </p>
-        <button onclick="print_pattern();">Just do it</button>
+
 
         <hr>
 
